--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,3 +32,11 @@ jobs:
           name: Deploy Docker image to Fly.io
           command: |
             flyctl deploy --image my-image --app retina-dd
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
