--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - run:
           name: Build Docker image
           command: |
-            docker build -t my-image .
+            docker build -t retina-dd .
       - save_cache:
           key: v1-docker-{{ checksum "Dockerfile" }}
           paths:
@@ -17,7 +17,7 @@ jobs:
             - /root/.docker/
   deploy:
     docker:
-      - image: flyio/flyctl:latest
+      - image: flyio/flyctl:v0.0.240
     steps:
       - checkout
       - run:
@@ -29,9 +29,13 @@ jobs:
           command: |
             flyctl auth login --access-token fo1_h6VXJ_7EvxElGt01Bk4B9kRmFuMRYjQ_bkQCXhu_0WY
       - run:
+          name: Check flyctl files
+          command: |
+            docker run -it --entrypoint=sh flyio/flyctl:latest -c "ls /"
+      - run:
           name: Deploy Docker image to Fly.io
           command: |
-            flyctl deploy --image my-image --app retina-dd
+            flyctl deploy --image retina-dd --app retina-dd
 workflows:
   version: 2
   build-and-deploy:
