--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,11 +30,11 @@ jobs:
           name: Deploy Docker image to Fly.io
           command: |
             flyctl deploy --image retina-dd --app retina-dd
+    requires:
+      - build
 workflows:
   version: 2
   build-and-deploy:
     jobs:
       - build
-      - deploy:
-          requires:
-            - build
+      - deploy
